--- a/cmd/videoCategory/BUILD.bazel
+++ b/cmd/videoCategory/BUILD.bazel
@@ -10,6 +10,7 @@ go_library(
     visibility = ["//visibility:public"],
     deps = [
         "//cmd",
+        "//pkg/utils",
         "//pkg/videoCategory",
         "@com_github_mark3labs_mcp_go//mcp",
         "@com_github_spf13_cobra//:cobra",
