--- a/.bazelignore
+++ b/.bazelignore
@@ -2,7 +2,10 @@
 .idea
 # Ignore all bazel-* symlinks. There is no full list since this can change
 # based on the name of the directory bazel is cloned into.
-bazel-*
+bazel-bin
+bazel-out
+bazel-testlogs
+bazel-yutu
 # Bazelisk version file
 .bazelversion
 
